# Piggy

./: .gitignore  Decls.pig  Enums.pig  Funcs.pig  Index.h.ast  LICENSE.txt  Namespace.pig  Piggy.sln  README.md  Structs.pig  Typedefs.pig  ast.txt  basic.pig  clean.sh  cuda-piggy.sh  cuda.pig  help.h  include.c  llvm-includes.cpp  llvmstuff  m.pig  m.spec  piggy.sh  todo
CSerializer/: CSerializer.csproj  Program.cs
ClangCode/: CMakeLists.txt  ClangCode.vcxproj  ClangCode.vcxproj.filters  Source.cpp  Source2.cpp  Source3.c  TreeDumper.cpp  build.sh  build2.sh  fix_AttrDump.inc  x.save
ClangCodeLinux/: ClangCodeLinux.vcxproj
ClangSerializer/: ClangSerializer.csproj  Program.cs  StringMarshaller.cs
ConsoleApp1/: ConsoleApp1.csproj  Piggy.csproj  Program.cs
CsharpSerializer/: CSharpLexer.g4  CSharpPreprocessorParser.g4  CSharpSerializer.csproj  Program.cs  ser.pig
Engine/: Automaton.cs  ClosureTaker.cs  Edge.cs  Engine.csproj  ErrorListener.cs  Fragment.cs  Intercept.cs  MultiMap.cs  NfaMatch.cs  NfaOptimizer.cs  OutputEngine.cs  Path.cs  Piggy.cs  SmartSet.cs  SpecFileAndListener.cs  SpecLexer.g4  SpecParser.g4  StackQueue.cs  State.cs  TemplateHelpers.cs  ThompsonsConstruction.cs  TreeRegEx.cs  patterns.xsd
Examples/: doit.sh  java-ast.txt  ser.pig
Grammars/: readme.md
Graphs/: DFSPostorder.cs  DFSPreorder.cs  Digraph.cs  DirectedEdge.cs  GraphAdjList.cs  Postorder.cs
JavaSerializer/: JavaSerializer.csproj  Program.cs
Piggy/: Application.cs  AstLexer.cs  AstLexer.g4  AstLexer.interp  AstLexer.tokens  AstListener.cs  AstParser.g4  AstParser.interp  AstParserBaseListener.cs  AstParserListener.cs  AstParserParser.cs  AstSymtabBuilderListener.cs  BuildMessage.cs  ClangApi.spec  Class1.cs  Combined.g4  ErrorListener.cs  Intercept.cs  InterceptStreamWriter.cs  MultiMap.cs  OutputEngine.cs  Parents.cs  Pass.cs  Pattern.cs  Piggy.DefaultItems.props  Piggy.DefaultItems.targets  Piggy.cs  Piggy.csproj  Piggy.props  Piggy.targets  Piggy.xml  PiggyClassGenerationTask.cs  PiggySchema.xml  Program.cs  SpecFile.cs  SpecFileAndListener.cs  SpecLexer.cs  SpecLexer.g4  SpecLexer.interp  SpecLexer.tokens  (+16 more)
PiggyBuildTask/: Class1.cs  Piggy.ProjectItemsSchema.xml  Piggy.xml  PiggyBuildTask.csproj  PiggyBuildTask.props  PiggyBuildTask.targets
PiggyGenerator/: AstSymtabBuilderListener.cs  Automaton.cs  ClosureTaker.cs  Edge.cs  ErrorListener.cs  Fragment.cs  Intercept.cs  InterceptStreamWriter.cs  MultiMap.cs  NFA.cs  (+17 more)
(+108 files in other folders)
